syntax = "proto3";

package request;

option go_package = "go-compiler/request-service/proto";

service RequestService {
  rpc ProcessRequest (ExecutionRequest) returns (ExecutionResponse) {}
}

message ExecutionRequest {
  string id = 1;
  string code = 2;
  int64 language_id = 3;
  string connection_id = 4;
  string stdin = 5;
}

message ExecutionResponse {
  string message = 1;
}